# inspire-exex

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.devin/: wiki.json
crates/alloy-wasm/: Cargo.toml
crates/alloy-wasm/src/: lib.rs
crates/burner-wallet/: .gitignore  Cargo.toml  README.md  askama.toml  build-wasm.sh  package-lock.json  package.json  playwright.config.ts
crates/burner-wallet/src/: main.rs
crates/burner-wallet/src/handlers/: wallet.rs
crates/burner-wallet/static/pir-pkg/: inspire_client_wasm.d.ts  inspire_client_wasm.js  inspire_client_wasm_bg.wasm  inspire_client_wasm_bg.wasm.d.ts  package.json
crates/burner-wallet/static/pkg/: alloy_wasm.d.ts  alloy_wasm.js  alloy_wasm_bg.wasm  alloy_wasm_bg.wasm.d.ts  package.json
crates/burner-wallet/templates/: base.html  wallet.html
crates/burner-wallet/tests/: e2e.spec.ts  pir-mock.ts
crates/inspire-client/: Cargo.toml
crates/inspire-client-wasm/: Cargo.toml
crates/inspire-client-wasm/examples/: headless-test.mjs  index.html  package-lock.json  usdc_demo.html
crates/inspire-client-wasm/src/: bucket_index.rs  client.rs  error.rs  lib.rs  security.rs  slots.rs  transport.rs  ubt_index.rs
crates/inspire-client/src/: bucket_index.rs  client.rs  error.rs  lib.rs
crates/inspire-core/: Cargo.toml
crates/inspire-core/src/: bucket_index.rs  config.rs  indexing.rs  lane.rs  lib.rs  manifest.rs  params.rs  routing.rs  state_format.rs  ubt.rs
crates/inspire-server/: Cargo.toml
crates/inspire-server/src/: broadcast.rs  error.rs  lib.rs  metrics.rs  routes.rs  server.rs  state.rs
crates/inspire-updater/: Cargo.toml
crates/inspire-updater/src/: delta_writer.rs  lib.rs  rpc.rs  service.rs  state.rs  writer.rs
crates/lane-builder/: Cargo.toml
crates/lane-builder/src/: balance_extractor.rs  builder.rs  contracts.rs  exex.rs  extractor.rs  gas_tracker.rs  hybrid_scorer.rs  lib.rs  reload.rs  setup.rs
crates/pir-client/: Cargo.toml
crates/pir-client/src/: hint_store.rs  lib.rs  query.rs  sync.rs
crates/pir-core/: Cargo.toml
crates/pir-core/src/: hint.rs  lib.rs  prf.rs  subset.rs
crates/pir-seeder/: Cargo.toml
crates/pir-seeder/src/: generator.rs  lib.rs  main.rs  publisher.rs
crates/pir-server-b/: Cargo.toml
crates/pir-server-b/src/: lib.rs  main.rs  responder.rs  server.rs
data/: hot-contracts.json
docs/: ETHREX_INTEGRATION.md  HOT_CONTRACTS.md  PROTOCOL.md  STATE_FORMAT.md
examples/: benchmark_large.rs  benchmark_real_sizes.rs  benchmark_seed_expansion.rs
scripts/: analyze_eip7864_stems.py  build-usdc-demo.py  convert-ethrex-to-plinko.py  deploy-eip7864-state.sh  ethrex-integration-test.sh  extract-usdc-state.py  resort-state.rs
tests/: e2e.rs  exex_integration.rs  server_e2e.rs  state_format.rs
web/wallet-core/examples/: state-query.html  test-wasm.html
web/wallet-core/src/: index.ts  pir-client.ts  state-client.ts  types.ts
