[package]
name = "burner-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Burner wallet UI with PIR balance queries and EIP-7702 signing"

[dependencies]
# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "trace", "fs"] }

# Templating
askama = "0.12"
askama_axum = "0.4"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PIR mock server (optional)
inspire-pir = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[features]
default = []
pir-mock = ["inspire-pir", "rand", "bincode", "reqwest"]

[[bin]]
name = "pir-mock-server"
path = "src/bin/pir_mock_server.rs"
required-features = ["pir-mock"]
