[package]
name = "pir-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "prf"
harness = false
