[package]
name = "pir-seeder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pir-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
memmap2 = { workspace = true }

# Reth ExEx
reth = { workspace = true }
reth-exex = { workspace = true }
reth-node-ethereum = { workspace = true }

# IPFS publishing
ipfs-api-backend-hyper = { workspace = true }

[features]
default = []
exex = []
