[package]
name = "pir-server-b"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pir-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
memmap2 = { workspace = true }
